--- a/styles/main.css
+++ b/styles/main.css
@@ -76,12 +76,21 @@ main, #messages-card {
 }
 .message-container .name {
   display: inline-block;
-  width: 100%;
+  width: 50%;
   padding-left: 40px;
   color: #bbb;
   font-style: italic;
   font-size: 12px;
   box-sizing: border-box;
+}
+
+.message-container .time {
+    display: inline-block;
+    width: 50%;
+    color: #bbb;
+    font-style: italic;
+    font-size: 12px;
+    box-sizing: border-box;
 }
 #message-form {
   display: flex;
