--- a/styles/main.css
+++ b/styles/main.css
@@ -12,7 +12,7 @@ main,
 }
 
 #messages-card-container {
-    height: calc(100% - 150px);
+    height: calc(100% - 30px);
     padding-bottom: 0;
 }
 
@@ -20,26 +20,26 @@ main,
     margin-top: 15px;
 }
 
-.mdl-layout__header-row span {
+/* .mdl-layout__header-row span {
     margin-left: 15px;
     margin-top: 17px;
-}
+} */
 
 .mdl-grid {
     max-width: 1024px;
     margin: auto;
 }
 
-.material-icons {
+/* .material-icons {
     font-size: 36px;
     top: 8px;
     position: relative;
-}
+} */
 
-.mdl-layout__header-row {
+/* .mdl-layout__header-row {
     padding: 0;
     margin: 0 auto;
-}
+} */
 
 .mdl-card__supporting-text {
     width: auto;
@@ -192,7 +192,8 @@ main,
 }
 
 #message-form .mdl-textfield {
-    width: calc(100% - 100px);
+    /* width: calc(100% - 100px); */
+    width: 100%;
 }
 
 #message-form button,
@@ -261,10 +262,10 @@ main,
 }
 
 @media screen and (max-width: 610px) {
-    header {
+    /* header {
         height: 113px;
         padding-bottom: 80px !important;
-    }
+    } */
     #user-container {
         top: 72px;
         background-color: rgb(3, 155, 229);
@@ -310,11 +311,9 @@ div#userId{display: none;}
     background: #888
 }​
 
-//style
+/* style */
 
-html, body {
-  font-family: 'Roboto', 'Helvetica', sans-serif;
-}
+
 .demo-avatar {
   width: 48px;
   height: 48px;
@@ -510,4 +509,23 @@ _:-ms-input-placeholder, :root .demo-graph {
   -webkit-align-items: center;
       -ms-flex-align: center;
           align-items: center;
+}
+
+
+
+div#user-pic {
+    width: 100px;
+    height: 100px;
+    background-size: cover;
+    border-radius: 50%;
+}
+
+header.demo-drawer-header {
+    display: grid;
+    align-self: center;
+    justify-self: center;
+}
+
+div#container {
+    text-align: center;
 }
