--- a/styles/main.css
+++ b/styles/main.css
@@ -1,12 +1,12 @@
-html, body {
+html,
+body {
     font-family: 'Roboto', 'Helvetica', sans-serif;
 }
 
-input[type="text"]{
-    font-family: inherit;
-}
+input[type="text"]{font-family: inherit;}
 
-main, #messages-card {
+main,
+#messages-card {
     height: 100%;
     padding-bottom: 0;
 }
@@ -20,10 +20,26 @@ main, #messages-card {
     margin-top: 15px;
 }
 
+/* .mdl-layout__header-row span {
+    margin-left: 15px;
+    margin-top: 17px;
+} */
+
 .mdl-grid {
     max-width: 1024px;
     margin: auto;
 }
+
+/* .material-icons {
+    font-size: 36px;
+    top: 8px;
+    position: relative;
+} */
+
+/* .mdl-layout__header-row {
+    padding: 0;
+    margin: 0 auto;
+} */
 
 .mdl-card__supporting-text {
     width: auto;
@@ -64,7 +80,7 @@ main, #messages-card {
     background-repeat: no-repeat;
     width: 30px;
     height: 30px;
-    background-size: 30px;
+    background-size: 32px;
     border-radius: 20px;
 }
 
@@ -124,7 +140,7 @@ main, #messages-card {
     background-repeat: no-repeat;
     width: 30px;
     height: 30px;
-    background-size: 30px;
+    background-size: 32px;
     border-radius: 20px;
 }
 
@@ -176,6 +192,7 @@ main, #messages-card {
 }
 
 #message-form .mdl-textfield {
+    /* width: calc(100% - 100px); */
     width: 100%;
 }
 
@@ -236,7 +253,7 @@ main, #messages-card {
 }
 
 .message img {
-    max-width: 300px;
+    max-width: 296px;
     max-height: 200px;
 }
 
@@ -292,7 +309,7 @@ div#userId{display: none;}
 }
 ::-webkit-scrollbar-thumb {
     background: #888
-}
+}​
 
 /* style */
 
@@ -493,6 +510,7 @@ _:-ms-input-placeholder, :root .demo-graph {
       -ms-flex-align: center;
           align-items: center;
 }
+
 
 
 div#user-pic {
