--- a/styles/main.css
+++ b/styles/main.css
@@ -5,7 +5,7 @@
   --main-font : 'Roboto', 'Helvetica', sans-serif;
 }
 
-html, body, input[type="text"] {
+html, body{
     font-family: var(--main-font);
 }
 
