--- a/styles/main.css
+++ b/styles/main.css
@@ -303,10 +303,7 @@ div#userId{display: none;}
 }
 ::-webkit-scrollbar-thumb {
     background: #888
-}​
-
-/* style */
-
+}
 
 .demo-avatar {
   width: 48px;
